src/objects/LAC_Farmer_Details__c.object
<CustomObject>
    <fields>
        <fullName>Proceso_certificacion__c</fullName>
        <label>Proceso certificacion</label>
        <picklist>
            <picklistValues>
                <fullName>CAFE practices</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rainforest Alliance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Orgánico</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UTZ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ninguno</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Producer_Code__c</fullName>
        <label>Producer Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Production_of_Coffee__c</fullName>
        <label>Production of Coffee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Production_of_Dried_Parchment_Coffee__c</fullName>
        <label>Production of Dried Parchment Coffee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Productividad__c</fullName>
        <label>Productividad</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Productivity__c</fullName>
        <formula>IF( Production_of_Coffee__c  == null || Production_of_Coffee__c  &lt;= 0, 0, (Production_of_Coffee__c  / Area_of_Coffee_Crop__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Productivity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Pruning__c</fullName>
        <label>Pruning</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quarterly_Income_from_Coffee__c</fullName>
        <label>Quarterly Income from Coffee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quarterly_Income_from_other_Crops__c</fullName>
        <label>Quarterly Income from other Crops</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quarterly_Production__c</fullName>
        <label>Quarterly Production</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quarterly_Sales__c</fullName>
        <label>Quarterly Sales</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quintales_acopiados__c</fullName>
        <label>Coffee quintals stored</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quintales_producidos__c</fullName>
        <label>Coffee quintals sold</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Registered_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Registered By</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Registered LAC Farmer Details</relationshipLabel>
        <relationshipName>LAC_Farmer_Details_Registered_By</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Registration_Consent__c</fullName>
        <label>Registration Consent</label>
        <picklist>
            <picklistValues>
                <fullName>Si</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Registration_GPS_Data__c</fullName>
        <description>Raw GPS String from direct mapping (includes lat, lng, altitude, accuracy)</description>
        <label>Registration GPS Data</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Registration_Location__c</fullName>
        <description>Where was the registration done?</description>
        <label>Registration Location</label>
        <picklist>
            <picklistValues>
                <fullName>La Finca (Zona de Cultivo)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>La Vivienda o casa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ambos debido que la vivienda se encuentra dentro de la finca</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Otro lugar</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SMS_Consent__c</fullName>
        <label>SMS Consent</label>
        <picklist>
            <picklistValues>
                <fullName>Si</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Seedbed__c</fullName>
        <label>Seedbed</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shadow_Management__c</fullName>
        <label>Shadow Management</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Smart_Phone__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Captures a value indicating whether the phone the farmer has is a smart phone.</description>
        <label>Smart Phone</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Activo</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Inactivo</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Strata__c</fullName>
        <label>Strata</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Monthly_Income__c</fullName>
        <formula>IF( (Annual_Income_from_Crop_Production__c +  Annual_Income_from__c + Annual_Income_From_Wages__c ) &lt;= 0, 0, (Annual_Income_from_Crop_Production__c +  Annual_Income_from__c + Annual_Income_From_Wages__c ) /12)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Monthly Income</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tratamiento_de_aguas__c</fullName>
        <label>Tratamiento de aguas</label>
        <picklist>
            <picklistValues>
                <fullName>Sí</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Village__c</fullName>
        <label>Village</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Water_Treatment__c</fullName>
        <label>Water Treatment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Wet_Mill__c</fullName>
        <label>Wet Mill</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Year_of_Fairtrade_Certification__c</fullName>
        <label>Year of Fairtrade Certification</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Year_of_Organic_Certification__c</fullName>
        <label>Year of Organic Certification</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Years_of_Education__c</fullName>
        <label>Years of Education</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>cooperativeProfile__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>cooperativeProfile</label>
        <referenceTo>LAC_Cooperative__c</referenceTo>
        <relationshipLabel>LAC_Farmer_Details_cooperative</relationshipLabel>
        <relationshipName>LAC_Farmer_Details_cooperative</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>interviewer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>interviewer</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>LAC_Farmer_Details_interviewer</relationshipLabel>
        <relationshipName>LAC_Farmer_Details_interviewer</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>manejo_sombra__c</fullName>
        <label>manejo sombra</label>
        <picklist>
            <picklistValues>
                <fullName>Sí</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>submision__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Submission</label>
        <referenceTo>gfsurveys__Submission__c</referenceTo>
        <relationshipLabel>LAC Farmer Details</relationshipLabel>
        <relationshipName>LAC_Farmer_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>LAC Farmer Details</label>
    <listViews>
        <fullName>All</fullName>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>Registered_By__c</columns>
        <columns>Latitude__c</columns>
        <columns>Longitude__c</columns>
        <columns>interviewer__c</columns>
        <columns>Contact__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>submision__c</columns>
        <columns>Cell_Phone_Number__c</columns>
        <columns>Farmer_Code__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>LAC Farmer Details Record Id</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>LAC Farmer Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>